# COMP231

./: .gitattributes  .gitignore  README.md  jest.config.ts  package-lock.json  package.json  script.js  show.html  tsconfig.json  tsconfig.prod.json
Login/: login.css  login.ejs
Ticket_App/: index.html  show.js  style.css  ticket.js
UI/: index.html  page2.html
UI/css/: page.css  style.css
docs/: architechture.drawio
ml/: README.md  pyproject.toml
ml/models/: catboost_urgency_balanced_acc92.cbm  label_encoder.pkl  reg_categories_balanced_acc84.pkl  svd1000.pkl  tfidf.pkl  xgb_urgency_balanced_acc91.xbm
ml/research/: research_keywords.ipynb  research_predictions.ipynb
ml/src/: main.py  propagating_thread.py
ml/src/tasks/: __init__.py  categories.py  common.py  keywords.py  similar_tickets.py
ml/tests/: test_categories.py  test_similar_tickets.py
server/: app.ts  build.ts  index.ts  server.ts
server/models/tickets/: ticket.model.ts  ticket.schema.ts  ticket.types.ts
server/models/tokens/: token.model.ts  token.schema.ts  token.types.ts
server/models/user/: user.model.ts  user.schema.ts  user.types.ts
server/public/css/: login.css  register.css  (+3 more)
server/routes/: api.ts  demo.ts  demoRoute.test.ts  index.ts  interfaces.ts  ticket.ts  tickets.test.ts  token.ts  tokens.test.ts  tokens.ts  users.test.ts  users.ts
server/shared/: conn.ts  constants.ts  functions.ts  jest.setup.ts  logger.ts  passport.ts
server/views/: account.ejs  index.ejs  info.ejs  layout.ejs  login.ejs  main.ejs  nav.ejs  register.ejs  submit.ejs  ticket.ejs  ticket_info.ejs
(+12 files in other folders)
