[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
pandas = "^1.2.3"
sklearn = "^0.0"
PyStemmer = "^2.0.1"
xgboost = "^1.3.3"
catboost = "^0.24.4"
fasttext = "^0.9.2"
lightgbm = "^3.1.1"
summa = "^1.2.0"
yake = "^0.4.6"
keybert = "^0.2.0"
aio-pika = "^6.8.0"
loguru = "^0.5.3"
imbalanced-learn = "^0.8.0"
strsimpy = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
seaborn = "^0.11.1"
notebook = "^6.2.0"
tqdm = "^4.59.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

